# NewsBlur

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DOWNTIME.md  Makefile  docker-compose.yml
.claude/commands/: commit-all.md
.github/workflows/: publish-cli.yml  tests.yml
TestFlight/: WhatToTest.en-US.txt
ansible/playbooks/: deploy_app_group.yml  deploy_app_group_static.yml
apps/analyzer/: __init__.py  models.py
apps/ask_ai/: providers.py
apps/briefing/: __init__.py  models.py  scoring.py  summary.py  tasks.py  tests.py  urls.py  views.py
apps/clustering/: models.py  tasks.py
apps/discover/: views.py
apps/mobile/: __init__.py
apps/monitor/: __init__.py  urls.py
apps/notifications/: __init__.py
apps/oauth/: __init__.py
apps/profile/: middleware.py  models.py  tasks.py  (+1 more)
config/: requirements.txt
newsblur_mcp/: Dockerfile  pyproject.toml
newsblur_mcp/newsblur_mcp/: client.py  server.py  settings.py  transforms.py
newsblur_mcp/newsblur_mcp/cli/: __init__.py  auth.py  runner.py
newsblur_mcp/newsblur_mcp/cli/commands/: auth.py
newsblur_mcp/newsblur_mcp/prompts/: prompts.py
newsblur_mcp/newsblur_mcp/resources/: resources.py
newsblur_mcp/newsblur_mcp/tools/: account.py  actions.py  classifiers.py  discovery.py  feeds.py  notifications.py  stories.py
newsblur_web/: settings.py  urls.py
templates/: base.html
utils/: bootstrap_loop.sh  check_health.sh  feed_fetcher.py  haproxy_batch_state.py  ip_rate_tracker.py  request_introspection_middleware.py  story_functions.py  test_haproxy_batch_state.py  user_functions.py  youtube_fetcher.py
(+118 files in other folders)
